cmake_minimum_required(VERSION 3.27)
project(CPUAPI_sol)

set(CMAKE_CXX_STANDARD 14)

add_executable(CPUAPI_sol
        Main.cpp
        questionOne.hpp
        questionTwo.hpp
        questionThree.hpp
        Main.cpp
        IncludeAllMethod.h
        questionFour.hpp
        questionFive.hpp
        questionSeven.hpp)
